--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.13.5",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
